--- a/Depo/LifeBox_Business/Presentation/UserStories/Settings/ContactUsView/ContactUsViewController.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Settings/ContactUsView/ContactUsViewController.xib
@@ -4,7 +4,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -14,9 +13,7 @@
             <connections>
                 <outlet property="descriptionLabel" destination="WnP-L2-Zf2" id="gok-IW-aFL"/>
                 <outlet property="sendButton" destination="O5M-Ln-gJK" id="733-4R-PMV"/>
-                <outlet property="subjectButton" destination="pJ8-v8-cFi" id="RoU-v0-h9g"/>
                 <outlet property="subjectContainerView" destination="q06-FI-X9Q" id="XJ4-Jf-Nzr"/>
-                <outlet property="subjectLabel" destination="DWY-2u-zOT" id="wp4-bN-fS8"/>
                 <outlet property="textView" destination="nLe-pV-cYL" id="bgM-cc-Iy9"/>
                 <outlet property="textViewContainerView" destination="9i9-Hw-MaQ" id="LIP-ql-OId"/>
                 <outlet property="textViewCounterLabel" destination="8va-1J-BgT" id="Mnr-sg-LZz"/>
@@ -40,40 +37,9 @@
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q06-FI-X9Q">
                     <rect key="frame" x="20" y="103" width="335" height="45"/>
-                    <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DWY-2u-zOT">
-                            <rect key="frame" x="20" y="15.5" width="257" height="14"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="downArrow" translatesAutoresizingMaskIntoConstraints="NO" id="xXu-FE-tnB">
-                            <rect key="frame" x="305" y="19.5" width="10" height="6"/>
-                            <color key="tintColor" name="labelTitle"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="10" id="0RL-pF-9qf"/>
-                                <constraint firstAttribute="height" constant="6" id="Nuh-yW-gPz"/>
-                            </constraints>
-                        </imageView>
-                        <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pJ8-v8-cFi">
-                            <rect key="frame" x="0.0" y="0.0" width="335" height="45"/>
-                            <connections>
-                                <action selector="subjectButonPressed:" destination="-1" eventType="touchUpInside" id="ZoS-gx-lPa"/>
-                            </connections>
-                        </button>
-                    </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
-                        <constraint firstItem="xXu-FE-tnB" firstAttribute="centerY" secondItem="q06-FI-X9Q" secondAttribute="centerY" id="FnR-0o-pdJ"/>
-                        <constraint firstAttribute="leading" secondItem="pJ8-v8-cFi" secondAttribute="trailing" constant="-335" id="K4E-fp-vQj"/>
-                        <constraint firstItem="pJ8-v8-cFi" firstAttribute="leading" secondItem="q06-FI-X9Q" secondAttribute="leading" id="RWP-21-fyS"/>
-                        <constraint firstAttribute="bottom" secondItem="pJ8-v8-cFi" secondAttribute="bottom" id="Rxg-jQ-NNq"/>
-                        <constraint firstItem="DWY-2u-zOT" firstAttribute="centerY" secondItem="q06-FI-X9Q" secondAttribute="centerY" id="TVJ-PV-cKY"/>
-                        <constraint firstAttribute="trailing" secondItem="xXu-FE-tnB" secondAttribute="trailing" constant="20" id="gbf-XP-tmb"/>
-                        <constraint firstAttribute="trailing" secondItem="DWY-2u-zOT" secondAttribute="trailing" constant="58" id="gwq-is-kPl"/>
                         <constraint firstAttribute="height" constant="45" id="o8Y-bY-oWt"/>
-                        <constraint firstItem="pJ8-v8-cFi" firstAttribute="top" secondItem="q06-FI-X9Q" secondAttribute="top" id="rRi-1U-GbE"/>
-                        <constraint firstItem="DWY-2u-zOT" firstAttribute="leading" secondItem="q06-FI-X9Q" secondAttribute="leading" constant="20" id="yky-Wv-8Yu"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9i9-Hw-MaQ">
@@ -137,15 +103,12 @@
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="O5M-Ln-gJK" secondAttribute="bottom" constant="20" id="jcz-tC-zzh"/>
                 <constraint firstItem="WnP-L2-Zf2" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="40" id="oz0-tg-JpV"/>
                 <constraint firstItem="9i9-Hw-MaQ" firstAttribute="top" secondItem="q06-FI-X9Q" secondAttribute="bottom" constant="10" id="vTM-at-mBz"/>
+                <constraint firstItem="9i9-Hw-MaQ" firstAttribute="top" secondItem="WnP-L2-Zf2" secondAttribute="bottom" constant="85" id="z15-yQ-YY8"/>
             </constraints>
             <point key="canvasLocation" x="-159.19999999999999" y="75.112443778110944"/>
         </view>
     </objects>
     <resources>
-        <image name="downArrow" width="13" height="8"/>
-        <namedColor name="labelTitle">
-            <color red="0.25098039215686274" green="0.32156862745098042" blue="0.38039215686274508" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
