--- a/Depo/LifeBox_Business/Presentation/UserStories/Settings/ContactUsView/ContactUsViewController.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Settings/ContactUsView/ContactUsViewController.xib
@@ -25,12 +25,11 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WnP-L2-Zf2">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WnP-L2-Zf2">
                     <rect key="frame" x="40" y="30" width="295" height="43"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="43" id="iAS-hs-xTM"/>
                     </constraints>
-                    <string key="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pretium sodales ex, eu iaculis nunc finibus at. Nam rutrum dui ligula. Nullam cursus tortor id maximus pulvinar. Nam et enim et nunc accumsan mollis vel sodales magna. Nullam ut ante vel ipsum sodales lobortis. Etiam molestie dignissim velit, iaculis venenatis sem imperdiet ac. Nam gravida sit amet eros vel feugiat.</string>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
