--- a/Depo/LifeBox_Business/Presentation/UserStories/Others/PrivateShare/New Share/Views/Shared/PrivateShareSharedFilesViewController.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Others/PrivateShare/New Share/Views/Shared/PrivateShareSharedFilesViewController.xib
@@ -11,19 +11,19 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PrivateShareSharedFilesViewController" customModule="lifeBox_Business" customModuleProvider="target">
             <connections>
-                <outlet property="collectionView" destination="c4H-7I-uCm" id="0SW-6d-QDm"/>
-                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="collectionView" destination="zES-4R-AmE" id="txT-kB-JiW"/>
+                <outlet property="view" destination="qtm-6t-baR" id="N6d-IL-QcP"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="i5M-Pr-FkT">
+        <view contentMode="scaleToFill" id="qtm-6t-baR">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="c4H-7I-uCm">
-                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="zES-4R-AmE">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="KbB-cg-g9h">
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="4sX-7e-skH">
                         <size key="itemSize" width="128" height="128"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -31,16 +31,15 @@
                     </collectionViewFlowLayout>
                 </collectionView>
             </subviews>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <viewLayoutGuide key="safeArea" id="3Ni-6q-moC"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="c4H-7I-uCm" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Rr6-mH-9ER"/>
-                <constraint firstItem="c4H-7I-uCm" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="VYX-m9-2g2"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="c4H-7I-uCm" secondAttribute="bottom" id="ZB1-LM-lx5"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="c4H-7I-uCm" secondAttribute="trailing" id="sw8-4z-rRR"/>
+                <constraint firstAttribute="bottom" secondItem="zES-4R-AmE" secondAttribute="bottom" id="3ds-YA-CGY"/>
+                <constraint firstItem="3Ni-6q-moC" firstAttribute="trailing" secondItem="zES-4R-AmE" secondAttribute="trailing" id="WZ2-XH-Hsq"/>
+                <constraint firstItem="zES-4R-AmE" firstAttribute="top" secondItem="qtm-6t-baR" secondAttribute="top" id="igh-I4-Pdh"/>
+                <constraint firstItem="zES-4R-AmE" firstAttribute="leading" secondItem="3Ni-6q-moC" secondAttribute="leading" id="y93-rS-jtL"/>
             </constraints>
-            <nil key="simulatedTopBarMetrics"/>
-            <point key="canvasLocation" x="-197.10144927536234" y="103.79464285714285"/>
+            <point key="canvasLocation" x="-655" y="-231"/>
         </view>
     </objects>
     <resources>
