--- a/Depo/LifeBox_Business/Presentation/UserStories/Others/PrivateShare/New Share/Views/Shared/TopBar/TopBarCustomSegmentedView.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Others/PrivateShare/New Share/Views/Shared/TopBar/TopBarCustomSegmentedView.xib
@@ -11,9 +11,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="TopBarCustomSegmentedView" customModule="lifeBox_Business" customModuleProvider="target">
+        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iN0-l3-epB" customClass="TopBarCustomSegmentedView" customModule="lifeBox_Business" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="390" height="40"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YmU-dn-5bk">
                     <rect key="frame" x="0.0" y="0.0" width="390" height="39"/>
@@ -34,6 +33,7 @@
                 <constraint firstAttribute="trailing" secondItem="YmU-dn-5bk" secondAttribute="trailing" id="HG4-B7-Wzf"/>
                 <constraint firstItem="GtN-5v-NYn" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Rg4-0A-Kn1"/>
                 <constraint firstAttribute="bottom" secondItem="GtN-5v-NYn" secondAttribute="bottom" id="aTW-st-p6z"/>
+                <constraint firstAttribute="height" constant="40" id="cuj-NL-HL3"/>
                 <constraint firstItem="YmU-dn-5bk" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="q6F-sh-17l"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="GtN-5v-NYn" secondAttribute="trailing" id="tnB-ys-WXM"/>
                 <constraint firstItem="YmU-dn-5bk" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="v1d-g1-QKq"/>
